k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bargio
  labels:
    app: bargio
spec:
  selector:
    matchLabels:
      app: bargio
  replicas: 1
  template:
    metadata:
      labels:
        app: bargio
    spec:
      containers:
      - name: bargio
        image: rg.fr-par.scw.cloud/achampion/bargio:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
      imagePullSecrets:
        - name: scaleway-cr
---
apiVersion: v1
kind: Service
metadata:
  name: bargio
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  - port: 443
    name: https
    protocol: TCP
    targetPort: 443
  selector:
    app: bargio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 30s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 600s
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: bargio
  labels:
    app: bargio
spec:
  rules:
  - host: foys.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bargio
            port: 
              number: 80
  tls:
  - secretName: bargio-tls
    hosts:
      - foys.fr
